tests/aster/x/mochi/rosetta/bulls-and-cows-player.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/bulls-and-cows-player.mochi:20:14

 20 |     let ch = substring(s, i, i + 1)
    |              ^

help:
  Declare substring before use
